--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <link href="./styles.css" rel="stylesheet" />
+  </head>
   <body>
     <h1>Me at the end of the course:</h1>
     <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExMjAyeDBxN25oYWF4M3V1dnoyamlleGpqeW14dTNtNDJyb2k1cmU3YiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/ule4vhcY1xEKQ/giphy.gif" />
