--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link href="./styles.css" rel="stylesheet" />
+    <!--<link href="./styles.css" rel="stylesheet" />-->
   </head>
   <body>
     <h1>Me at the end of the course:</h1>
