--- a/index.html
+++ b/index.html
@@ -1,12 +1,58 @@
-<html>
-  <head>
-    <!--<link href="./styles.css" rel="stylesheet" />-->
-  </head>
+<!--<html>
   <body>
     <h1>Me at the end of the course:</h1>
     <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExMjAyeDBxN25oYWF4M3V1dnoyamlleGpqeW14dTNtNDJyb2k1cmU3YiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/ule4vhcY1xEKQ/giphy.gif" />
     <h1>A Project I Enjoyed</h1>
     <p>One project I enjoyed in university was my cyber security project, which involved creating a program to detect phishing in emails.</p>
     <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZnZrcmE3YzEwNWgxbGtqNXZrdWswbGFpN3I5Y2R0aGhteW9ta3dxZiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/6r9moxvptqQjzrt7Cp/giphy.gif" />
+  </body>
+</html>-->
+<html>
+  <head>
+    <style>
+        body {
+          background-image:repeating-radial-gradient(blue,orange,purple 40px);
+          font-family: Arial;
+          color:darkslategrey;
+          margin: 0;
+          padding: 50px 20px;
+          line-height:1.6;
+        }
+
+        .container {
+          max-width:600px;
+          margin: 0 auto;
+          padding:30px;
+          background-color:white;
+          border-radius:8px;
+          box-shadow: 0 2px 5px rgba(0,0,0,0.1);  
+          text-align: left;
+        }
+
+        h1 {
+            color:midnightblue;
+            font-size: 2rem;
+            margin-bottom: 5px;
+        }
+
+        h3 {
+            color: darkgrey;
+            font-size: 1.1rem;
+            font-weight: 400;
+            margin: 0 0 20px 0;
+        }
+
+        p {
+            color:dimgray;
+            margin-bottom: 15px;
+        }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Isaac<h1>
+      <h3>I'm a Software Engineer</h3>
+      <p>My name is Isaac, and I enjoy cybersecurity and coding. One of my favorite projects was creating a program to detect phishing in emails. I also enjoyed a project to create a chat program in Python.</p>
+    </div>
   </body>
 </html>
